# knight-survivor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  main.cpp
src/: Background.cpp  Background.hpp  Button.cpp  Button.hpp  Coin.cpp  Coin.hpp  DamageText.cpp  Enemy.cpp  Enemy.hpp  FPSCounter.cpp  FPSCounter.hpp  FireStaff.cpp  Fireball.cpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  GameObject.hpp  Goblin.cpp  Goblin.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Text.cpp  Text.hpp  Weapon.hpp  main.cpp
src/common/: GameEntity.cpp  GameEntity.hpp  GameObject.cpp
src/enemy/: Enemy.cpp  Enemy.hpp  Goblin.cpp  Goblin.hpp
src/projectile/: Fireball.cpp  Fireball.hpp  Knife.cpp  Knife.hpp  MagicMissile.cpp  MagicMissile.hpp  Projectile.cpp  Projectile.hpp
src/test/: ButtonTest.cpp  ButtonTest.hpp  EnemyTest.cpp  EnemyTest.hpp  EntityTest.cpp  EntityTest.hpp  PlayerTest.cpp  PlayerTest.hpp  ProjectileTest.cpp  ProjectileTest.hpp  TextTest.cpp  TextTest.hpp  WeaponTest.cpp  WeaponTest.hpp  test.cpp
src/ui/: Button.cpp  Button.hpp  DamageText.cpp  DamageText.hpp  FPSCounter.cpp  HealthCount.cpp  HealthCount.hpp  Text.cpp  Text.hpp  TimeIndicator.cpp  TimeIndicator.hpp  XPLevelIndicator.cpp  XPLevelIndicator.hpp
src/weapon/: FireStaff.cpp  FireStaff.hpp  KnifeThrower.cpp  KnifeThrower.hpp  MissileBook.cpp  MissileBook.hpp  Weapon.cpp  Weapon.hpp
